--- a/data/cards/03137279.yaml
+++ b/data/cards/03137279.yaml
@@ -7,8 +7,8 @@ name:
   fr: Ixeep, Présage du Ghoti
   it: Ixeep, Presagio dei Ghoti
   pt: Ixeep, o Presságio dos Ghoti
-  ja: ゴーティスの<ruby>兆<rt>ちょう</rt></ruby>イグジープ
-  ja_romaji: Gōtisu no Chō Igujīpu
+  ja: ゴーティスの<ruby>兆<rt>きざし</rt></ruby>イグジープ
+  ja_romaji: Gōtisu no Kizashi Igujīpu
   ko:
   ko_rr:
   zh-TW:
