--- a/data/cards/05852388.yaml
+++ b/data/cards/05852388.yaml
@@ -1,7 +1,7 @@
 konami_id: 18720
 password: 5852388
 name:
-  en: Xeno Meteoros
+  en: Xeno Meteorus
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 异度陨石龙
 text:
   en: |-
-    If a card(s) is destroyed by battle or card effect: You can Special Summon this card from your hand. During your Main Phase: You can activate this effect; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Dragon, Dinosaur, Sea Serpent, and Wyrm monsters, also destroy 1 Dinosaur monster you control or in your hand, then Special Summon 1 Dinosaur Normal Monster from your hand or Deck. You can only use each effect of "Xeno Meteoros" once per turn.
+    If a card(s) is destroyed by battle or card effect: You can Special Summon this card from your hand. During your Main Phase: You can activate this effect; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Dragon, Dinosaur, Sea Serpent, and Wyrm monsters, also destroy 1 Dinosaur monster you control or in your hand, then Special Summon 1 Dinosaur Normal Monster from your hand or Deck. You can only use each effect of "Xeno Meteorus" once per turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ atk: 2000
 def: 200
 images:
 - index: 1
-  image: XenoMeteoros-DBWS-JP-SR.png
+  image: XenoMeteorus-DBWS-JP-SR.png
 sets:
   ja:
   - set_number: DBWS-JP001
