--- a/data/cards/09416697.yaml
+++ b/data/cards/09416697.yaml
@@ -7,8 +7,8 @@ name:
   fr: Eanoc, Sentinelle du Ghoti
   it: Eanoc, Sentinella dei Ghoti
   pt: Eanoc, o Sentinela dos Ghoti
-  ja: ゴーティスの<ruby>番<rt>ばん</rt></ruby><ruby>人<rt>にん</rt></ruby>イーノック
-  ja_romaji: Gōtisu no Bannin Īnokku
+  ja: ゴーティスの<ruby>守<rt>もり</rt></ruby><ruby>人<rt>びと</rt></ruby>イーノック
+  ja_romaji: Gōtisu no Moribito Īnokku
   ko:
   ko_rr:
   zh-TW:
