--- a/data/cards/10642488.yaml
+++ b/data/cards/10642488.yaml
@@ -8,7 +8,7 @@ name:
   it: Vic Viper T301
   pt: Vic Viper T301
   ja: ビック・バイパー Ｔ３０１
-  ja_romaji: Bikku Baipā Tī Surī Zero Wan
+  ja_romaji: Bikku Baipā Tī Surī Ō Wan
   ko: 빅 바이퍼 T301
   ko_rr: Bik Baipeo Ti Seuri Jiro Wan
   zh-TW:
