--- a/data/cards/14089428.yaml
+++ b/data/cards/14089428.yaml
@@ -8,7 +8,7 @@ name:
   it: Thunder Blu T-45
   pt: Trovão Azul T-45
   ja: ブルーサンダーＴ４５
-  ja_romaji: Burū Sandā Tī Fō Faibu
+  ja_romaji: Burū Sandā Tī Fōtīfaibu
   ko: 블루 썬더 T45
   ko_rr:
   zh-TW:
