--- a/data/cards/14166715.yaml
+++ b/data/cards/14166715.yaml
@@ -36,7 +36,7 @@ series:
 - Recipe
 images:
 - index: 1
-  image: RecettedeViandeMeatRecipe-DBWS-JP-C.png
+  image: RecettedeViande(MeatRecipe)-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP038
