--- a/data/cards/14731897.yaml
+++ b/data/cards/14731897.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>結<rt>けっ</rt></ruby><ruby>束<rt>そく</rt></ruby> ＵＮＩＴＹ
-  ja_romaji: Kessoku UNITY
+  ja_romaji: Kessoku Yunitī
   ko:
   ko_rr:
   zh-TW:
