--- a/data/cards/30128445.yaml
+++ b/data/cards/30128445.yaml
@@ -1,7 +1,7 @@
 konami_id: 18724
 password: 30128445
 name:
-  en: Transcendrake Drillgnathus
+  en: Transcendosaurus Drillygnathus
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 6 monsters
-    If this card with no material battles another monster, any battle damage it inflicts to your opponent is doubled. You can only use each of the following effects of "Transcendrake Drillgnathus" once per turn. You can detach 1 material from this card, then target 1 of your banished Dinosaur monsters; Special Summon it. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card.
+    If this card with no material battles another monster, any battle damage it inflicts to your opponent is doubled. You can only use each of the following effects of "Transcendosaurus Drillygnathus" once per turn. You can detach 1 material from this card, then target 1 of your banished Dinosaur monsters; Special Summon it. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card.
   de:
   es:
   fr:
@@ -38,10 +38,10 @@ atk: 3000
 def: 2300
 materials: 2 Level 6 monsters
 series:
-- Transcendrake
+- Transcendosaurus
 images:
 - index: 1
-  image: TranscendrakeDrillgnathus-DBWS-JP-C.png
+  image: TranscendosaurusDrillygnathus-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP005
