--- a/data/cards/40551410.yaml
+++ b/data/cards/40551410.yaml
@@ -33,7 +33,7 @@ series:
 - Recipe
 images:
 - index: 1
-  image: RecettedePersonnelStaffRecipe-DBWS-JP-C.png
+  image: RecettedePersonnel(StaffRecipe)-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP039
