--- a/data/cards/41773061.yaml
+++ b/data/cards/41773061.yaml
@@ -38,7 +38,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: VoicilaCarteTodaysMenu-DBWS-JP-SR.png
+  image: VoicilaCarte(TodaysMenu)-DBWS-JP-SR.png
 sets:
   ja:
   - set_number: DBWS-JP036
