--- a/data/cards/46037983.yaml
+++ b/data/cards/46037983.yaml
@@ -7,8 +7,8 @@ name:
   fr: Paces, Lumière du Ghoti
   it: Paces, Luce dei Ghoti
   pt: Paces, a Luz dos Ghoti
-  ja: ゴーティスの<ruby>灯<rt>ひ</rt></ruby>ペイシス
-  ja_romaji: Gōtisu no Hi Peishisu
+  ja: ゴーティスの<ruby>灯<rt>あかり</rt></ruby>ペイシス
+  ja_romaji: Gōtisu no Akari Peishisu
   ko:
   ko_rr:
   zh-TW:
