--- a/data/cards/62201847.yaml
+++ b/data/cards/62201847.yaml
@@ -8,7 +8,7 @@ name:
   it: Myutante M-05
   pt: Miutante M-05
   ja: <ruby>被<rt>ひ</rt></ruby><ruby>検<rt>けん</rt></ruby><ruby>体<rt>たい</rt></ruby>ミュートリアＭ－０５
-  ja_romaji: Hikentai Myūtoria Emu Zero Go
+  ja_romaji: Hikentai Myūtoria Emu Ō Faibu
   ko: 피험체 뮤트리아 M－05
   ko_rr: Piheomche Myuteuria M-05
   zh-TW:
