--- a/data/cards/66927994.yaml
+++ b/data/cards/66927994.yaml
@@ -8,7 +8,7 @@ name:
   it: Carro Armato Oni T-34
   pt: Tanque Oni T-34
   ja: <ruby>鬼<rt>おに</rt></ruby>タンクＴ－３４
-  ja_romaji: Oni Tanku T-34
+  ja_romaji: Oni Tanku Tī Sanjūyon
   ko: 도깨비 탱크 T－34
   ko_rr:
   zh-TW:
