--- a/data/cards/67745632.yaml
+++ b/data/cards/67745632.yaml
@@ -1,7 +1,7 @@
 konami_id: 18722
 password: 67745632
 name:
-  en: Transcendrake Gigantozowler
+  en: Transcendosaurus Gigantozowler
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Dinosaur monster + 1 Normal Monster
-    If this card is Special Summoned: You can target 1 Dinosaur monster in your GY; add it to your hand, then, if this card was Special Summoned from the GY, you can destroy both 1 card you control or in your hand and 1 card your opponent controls. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use each effect of "Transcendrake Gigantozowler" once per turn.
+    If this card is Special Summoned: You can target 1 Dinosaur monster in your GY; add it to your hand, then, if this card was Special Summoned from the GY, you can destroy both 1 card you control or in your hand and 1 card your opponent controls. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use each effect of "Transcendosaurus Gigantozowler" once per turn.
   de:
   es:
   fr:
@@ -38,10 +38,10 @@ atk: 3800
 def: 2000
 materials: 1 Dinosaur-Type monster + 1 Normal Monster
 series:
-- Transcendrake
+- Transcendosaurus
 images:
 - index: 1
-  image: TranscendrakeGigantozowler-DBWS-JP-SR.png
+  image: TranscendosaurusGigantozowler-DBWS-JP-SR.png
 sets:
   ja:
   - set_number: DBWS-JP003
