--- a/data/cards/69815951.yaml
+++ b/data/cards/69815951.yaml
@@ -8,7 +8,7 @@ name:
   it: Drytron Meteonis Draconids
   pt: Drytron Meteonis Draconids
   ja: <ruby>竜儀巧<rt>ドライトロン</rt></ruby>－メテオニス＝ＤＲＡ
-  ja_romaji: Doraitoron - Meteonisu = Dora
+  ja_romaji: Doraitoron - Meteonisu = Dī Āru Ē
   ko: 드라이트론－메테오니스＝DRA
   ko_rr:
   zh-TW:
