--- a/data/cards/87778106.yaml
+++ b/data/cards/87778106.yaml
@@ -36,7 +36,7 @@ series:
 - Recipe
 images:
 - index: 1
-  image: RecettedePoissonFishRecipe-DBWS-JP-C.png
+  image: RecettedePoisson(FishRecipe)-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP037
