--- a/data/cards/94130731.yaml
+++ b/data/cards/94130731.yaml
@@ -1,7 +1,7 @@
 konami_id: 18723
 password: 94130731
 name:
-  en: Transcendrake Glacesaurus
+  en: Transcendosaurus Glaciasaurus
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    Cannot be destroyed by battle. Your opponent cannot target your Dinosaur monsters Special Summoned from the GY with card effects, also they cannot be destroyed by your opponent's card effects. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use this effect of "Transcendrake Glacesaurus" once per turn.
+    Cannot be destroyed by battle. Your opponent cannot target your Dinosaur monsters Special Summoned from the GY with card effects, also they cannot be destroyed by your opponent's card effects. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use this effect of "Transcendosaurus Glaciasaurus" once per turn.
   de:
   es:
   fr:
@@ -38,10 +38,10 @@ atk: 3600
 def: 2700
 materials: 1 Tuner + 1 or more non-Tuner monsters
 series:
-- Transcendrake
+- Transcendosaurus
 images:
 - index: 1
-  image: TranscendrakeGlacesaurus-DBWS-JP-C.png
+  image: TranscendosaurusGlaciasaurus-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP004
