--- a/data/cards/95209656.yaml
+++ b/data/cards/95209656.yaml
@@ -8,7 +8,7 @@ name:
   it: Drytron Meteonis Quadrantids
   pt: Drytron Meteonis Quadrantids
   ja: <ruby>竜儀巧<rt>ドライトロン</rt></ruby>－メテオニス＝ＱＵＡ
-  ja_romaji: Doraitoron - Meteonisu = Kuwa
+  ja_romaji: Doraitoron - Meteonisu = Kyū Yū Ē
   ko: 드라이트론－메테오니스＝QUA
   ko_rr:
   zh-TW:
