--- a/data/cards/03868277.yaml
+++ b/data/cards/03868277.yaml
@@ -8,7 +8,7 @@ name:
   it: TGX3-DX2
   pt: TGX3-DX2
   ja: ＴＧＸ３－ＤＸ２
-  ja_romaji: Tī Jī Ekusu Surī - Dī Ekusu Tsū
+  ja_romaji: Tī Jī Ekkusu Surī - Dī Ekkusu Tsū
   ko: TGX3－DX2
   ko_rr:
   zh-TW:
