--- a/data/cards/40253382.yaml
+++ b/data/cards/40253382.yaml
@@ -8,7 +8,7 @@ name:
   it: TG-SX1
   pt: TG-SX1
   ja: ＴＧ－ＳＸ１
-  ja_romaji: Tī Jī - Esu Ekusu Wan
+  ja_romaji: Tī Jī - Esu Ekkusu Wan
   ko: TG－SX1
   ko_rr:
   zh-TW:
