--- a/data/cards/83764996.yaml
+++ b/data/cards/83764996.yaml
@@ -8,7 +8,7 @@ name:
   it: Il Gentiluomo Illusorio
   pt:
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>紳<rt>しん</rt></ruby><ruby>士<rt>し</rt></ruby>－Ｊ
-  ja_romaji: Madōshinshi - J
+  ja_romaji: Madōshinshi - Jei
   ko: 마도신사－J
   ko_rr:
   zh-TW:
