--- a/data/cards/28168628.yaml
+++ b/data/cards/28168628.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 "Vanquish Soul" monster
-    Cannot be used as Link Material. While you control a "Vanquish Soul" monster, your opponent's monsters can only target your monster with the highest ATK for attacks (their choice, if tied). During the Main Phase (Quick Effect): You can activate 1 of these effects;
+    Cannot be used as Link Material. While you control a "Vanquish Soul" monster, your opponent's monsters can only target monsters you control with the highest ATK (their choice, if tied) for attacks. During the Main Phase (Quick Effect): You can activate 1 of these effects;
     ● Special Summon 1 "Vanquish Soul" monster from your hand.
     ● Add 1 "Vanquish Soul" monster from your GY to your hand.
     You can only use this effect of "Rock of the Vanquisher" once per turn.
@@ -44,6 +44,31 @@ images:
 - index: 1
   image: RockoftheVanquisher-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN022
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: WISU-DE022
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: WISU-FR022
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: WISU-IT022
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: WISU-PT022
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBWS-JP022
     set_name: 'Deck Build Pack: Wild Survivors'
