--- a/data/cards/53618197.yaml
+++ b/data/cards/53618197.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 新式魔餐 油封肉佛拉士
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Confiras de Nouvelles" once per turn. If this card is Special Summoned: You can target 1 Spell/Trap on the field; destroy it. When a card or effect is activated that targets this card, or when this card is targeted for an attack (Quick Effect): You can Tribute both this card and 1 other Attack Position monster on either field, and if you do, Special Summon 1 Level 3 or 4 "Nouvelles" Ritual Monster from your hand or Deck.
+    You can Ritual Summon this card with a "Recipe" card. If this card is Special Summoned: You can target 1 Spell/Trap on the field; destroy it. When a card or effect is activated that targets this card on the field, or when this card is targeted for an attack (Quick Effect): You can Tribute this card and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 3 or 4 "Nouvelles" Ritual Monster from your hand or Deck. You can only use each effect of "Confiras de Nouvelles" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: ConfirasdeNouvelles-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN030
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE030
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR030
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT030
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT030
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP030
     set_name: 'Deck Build Pack: Wild Survivors'
