--- a/data/cards/54562327.yaml
+++ b/data/cards/54562327.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 赌上你的灵魂！
 text:
   en: |-
-    Reveal 1 monster in your hand; Special Summon 1 "Vanquish Soul" monster from your Deck with the same Attribute but a different name, but return it to the hand during the End Phase. You can only activate 1 "Stake your Soul!" per turn.
+    Reveal 1 monster in your hand; Special Summon 1 "Vanquish Soul" monster with the same Attribute, but a different name, from your Deck, but return it to the hand during the End Phase. You can only activate 1 "Stake your Soul!" per turn.
   de:
   es:
   fr:
@@ -33,6 +33,31 @@ images:
 - index: 1
   image: StakeyourSoul-DBWS-JP-SR.png
 sets:
+  en:
+  - set_number: WISU-EN023
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: WISU-DE023
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: WISU-FR023
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: WISU-IT023
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: WISU-PT023
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBWS-JP023
     set_name: 'Deck Build Pack: Wild Survivors'
