--- a/data/cards/55688914.yaml
+++ b/data/cards/55688914.yaml
@@ -15,10 +15,10 @@ name:
   zh-CN: 征服之魂 软泥骷髅HG
 text:
   en: |-
-    During your opponent's turn, if you control no monsters in your Main Monster Zone, or only "Vanquish Soul" monsters (Quick Effect): You can Special Summon this card from your hand. (Quick Effect): You can reveal 1 monster in your hand of each of the following Attributes, then activate the appropriate effect;
+    During your opponent's turn, if you control no monsters, or only "Vanquish Soul" monsters, in your Main Monster Zone (Quick Effect): You can Special Summon this card from your hand. (Quick Effect): You can activate 1 of these effects, by revealing monster(s) in your hand with the listed Attribute(s);
     ● FIRE: This card gains 3000 DEF until the end of this turn.
-    ● DARK and EARTH: This card gains 3000 ATK until the end of this turn.
-    You can only use each effect of "Vanquish Soul Pluton HG" once per turn, and cannot activate them in the same Chain.
+    ● DARK & EARTH: This card gains 3000 ATK until the end of this turn.
+    You can only use each effect of "Vanquish Soul Pluton HG" once per turn, and cannot activate more than 1 in the same Chain.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ images:
 - index: 1
   image: VanquishSoulPlutonHG-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN020
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE020
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR020
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT020
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT020
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP020
     set_name: 'Deck Build Pack: Wild Survivors'
