--- a/data/cards/67745632.yaml
+++ b/data/cards/67745632.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Dinosaur monster + 1 Normal Monster
-    If this card is Special Summoned: You can target 1 Dinosaur monster in your GY; add it to your hand, then, if this card was Special Summoned from the GY, you can destroy both 1 card you control or in your hand and 1 card your opponent controls. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use each effect of "Transcendosaurus Gigantozowler" once per turn.
+    If this card is Special Summoned: You can target 1 Dinosaur monster in your GY; add it to your hand, then, if this card was Special Summoned from the GY, you can destroy 2 cards (1 from your hand or field, and 1 your opponent controls). If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use each effect of "Transcendosaurus Gigantozowler" once per turn.
   de:
   es:
   fr:
@@ -43,6 +43,31 @@ images:
 - index: 1
   image: TranscendosaurusGigantozowler-DBWS-JP-SR.png
 sets:
+  en:
+  - set_number: WISU-EN003
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE003
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR003
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT003
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT003
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP003
     set_name: 'Deck Build Pack: Wild Survivors'
