--- a/data/cards/80738884.yaml
+++ b/data/cards/80738884.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 征服之魂 龙帝之枪
 text:
   en: |-
-    When your opponent activates a Spell/Trap Card, or monster effect, that targets a card(s) you control while you control a "Vanquish Soul" monster: Negate the activation, and if you do, destroy that card, then you can inflict damage to your opponent equal to the ATK of 1 "Vanquish Soul" monster you control. You can only activate 1 "Vanquish Soul Calamity Caesar" per turn.
+    When an opponent's Spell/Trap Card, or monster effect, is activated that targets a card(s) you control, while you control a "Vanquish Soul" monster: Negate the activation, and if you do, destroy that card, then you can inflict damage to your opponent equal to the ATK of 1 "Vanquish Soul" monster you control. You can only activate 1 "Vanquish Soul Calamity Caesar" per turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ images:
 - index: 1
   image: VanquishSoulCalamityCaesar-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN027
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  de:
+  - set_number: WISU-DE027
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  fr:
+  - set_number: WISU-FR027
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  it:
+  - set_number: WISU-IT027
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  pt:
+  - set_number: WISU-PT027
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: DBWS-JP027
     set_name: 'Deck Build Pack: Wild Survivors'
