--- a/data/cards/05852388.yaml
+++ b/data/cards/05852388.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 异度陨石龙
 text:
   en: |-
-    If a card(s) is destroyed by battle or card effect: You can Special Summon this card from your hand. During your Main Phase: You can activate this effect; you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Dragon, Dinosaur, Sea Serpent, and Wyrm monsters, also destroy 1 Dinosaur monster you control or in your hand, then Special Summon 1 Dinosaur Normal Monster from your hand or Deck. You can only use each effect of "Xeno Meteorus" once per turn.
+    If a card(s) is destroyed by battle or card effect: You can Special Summon this card from your hand. During your Main Phase: You can destroy 1 Dinosaur monster in your hand or field, then Special Summon 1 Dinosaur Normal Monster from your hand or Deck, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Dragon, Dinosaur, Sea Serpent, or Wyrm monsters. You can only use each effect of "Xeno Meteorus" once per turn.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ images:
 - index: 1
   image: XenoMeteorus-DBWS-JP-SR.png
 sets:
+  en:
+  - set_number: WISU-EN001
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE001
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR001
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT001
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT001
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP001
     set_name: 'Deck Build Pack: Wild Survivors'
