--- a/data/cards/14166715.yaml
+++ b/data/cards/14166715.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN: Recette de Viande~肉料理的食谱~
 text:
   en: |-
-    This card can be used to Ritual Summon any "Nouvelles" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Confiras de Nouvelles" with this effect, you can apply the following effect.
-    ● Change all opponent's Defense Position monsters to face-up Attack Position.
+    This card can be used to Ritual Summon any "Nouvelles" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Confiras de Nouvelles", you can apply the following effect.
+    ● Change all Defense Position monsters your opponent currently controls to Attack Position.
   de:
   es:
   fr:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: RecettedeViande(MeatRecipe)-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN038
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE038
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR038
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT038
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT038
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP038
     set_name: 'Deck Build Pack: Wild Survivors'
