--- a/data/cards/15001940.yaml
+++ b/data/cards/15001940.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 新式魔餐 酱鹅肝格剌西亚
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Foie Glasya de Nouvelles" once per turn. If this card is Special Summoned: You can target up to 3 cards in any GY(s); shuffle them into the Deck. When a card or effect is activated that targets a monster(s) on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute both 1 "Nouvelles" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 5 or 6 "Nouvelles" Ritual Monster from your hand or Deck.
+    You can Ritual Summon this card with a "Recipe" card. If this card is Special Summoned: You can target up to 3 cards in any GY(s); shuffle them into the Deck. When a card or effect is activated that targets a monster on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute 1 "Nouvelles" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 5 or 6 "Nouvelles" Ritual Monster from your hand or Deck. You can only use each effect of "Foie Glasya de Nouvelles" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: FoieGlasyadeNouvelles-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN032
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE032
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR032
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT032
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT032
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP032
     set_name: 'Deck Build Pack: Wild Survivors'
