--- a/data/cards/15388353.yaml
+++ b/data/cards/15388353.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 新式魔餐旅店『上桌』
 text:
   en: |-
-    When this card is activated: You can add 1 "Recipe" card from your Deck or GY to your hand. Once per turn: You can place 1 Ritual Monster from your hand on the bottom of the Deck; draw 1 card. Once per turn, during your End Phase: You can target 2 cards in your GY, including a "Recipe" card; place them on the bottom of the Deck in any order, then draw 1 card. You can only activate 1 "Nouvelles Restaurant "At Table"" per turn.
+    When this card is activated: You can add 1 "Recipe" card from your Deck or GY to your hand. Once per turn: You can place 1 Ritual Monster from your hand on the bottom of the Deck; draw 1 card. Once per turn, during your End Phase: You can target 2 cards in your GY, including a "Recipe" card; place them on the bottom of your Deck in any order, then draw 1 card. You can only activate 1 "Nouvelles Restaurant "At Table"" per turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ images:
 - index: 1
   image: NouvellesRestaurantAtTable-DBWS-JP-SR.png
 sets:
+  en:
+  - set_number: WISU-EN035
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: WISU-DE035
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: WISU-FR035
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: WISU-IT035
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: WISU-PT035
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBWS-JP035
     set_name: 'Deck Build Pack: Wild Survivors'
