--- a/data/cards/26223582.yaml
+++ b/data/cards/26223582.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 新式魔餐 炖鱼羹帕尔
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Buerillabaisse de Nouvelles" once per turn. If this card is Special Summoned: You can excavate the top 5 cards of your Deck, and if you do, you can add 1 excavated "Nouvelles" card to your hand, also shuffle the rest into the Deck. When a card or effect is activated that targets this card, or when this card is targeted for an attack (Quick Effect): You can Tribute both this card and 1 other Attack Position monster on either field, and if you do, Special Summon 1 Level 2 or 3 "Nouvelles" Ritual Monster from your hand or Deck.
+    You can Ritual Summon this card with a "Recipe" card. If this card is Special Summoned: You can excavate the top 5 cards of your Deck, and if you do, you can add 1 excavated "Nouvelles" card to your hand, also shuffle the rest into the Deck. When a card or effect is activated that targets this card on the field, or when this card is targeted for an attack (Quick Effect): You can Tribute this card and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 2 or 3 "Nouvelles" Ritual Monster from your hand or Deck. You can only use each effect of "Buerillabaisse de Nouvelles" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: BuerillabaissedeNouvelles-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN029
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  de:
+  - set_number: WISU-DE029
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  fr:
+  - set_number: WISU-FR029
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  it:
+  - set_number: WISU-IT029
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  pt:
+  - set_number: WISU-PT029
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: DBWS-JP029
     set_name: 'Deck Build Pack: Wild Survivors'
