--- a/data/cards/27345070.yaml
+++ b/data/cards/27345070.yaml
@@ -34,6 +34,31 @@ images:
 - index: 1
   image: VanquishSoulContinue-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN025
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE025
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR025
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT025
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT025
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP025
     set_name: 'Deck Build Pack: Wild Survivors'
