--- a/data/cards/29280200.yaml
+++ b/data/cards/29280200.yaml
@@ -15,10 +15,10 @@ name:
   zh-CN: 征服之魂 狂恋博士
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 "Vanquish Soul" Spell/Trap from your Deck to your hand. (Quick Effect): You can reveal 1 monster in your hand of each of the following Attributes, then activate the appropriate effect;
+    If this card is Normal or Special Summoned: You can add 1 "Vanquish Soul" Spell/Trap from your Deck to your hand. (Quick Effect): You can activate 1 of these effects, by revealing monster(s) in your hand with the listed Attribute(s);
     ● DARK: 1 face-up monster your opponent controls loses 500 ATK/DEF.
-    ● DARK and EARTH: Return the 1 monster on the field with the lowest DEF to the hand (your choice, if tied).
-    You can only use each effect of "Vanquish Soul Dr. Mad Love" once per turn, and cannot activate them in the same Chain.
+    ● DARK & EARTH: Return the 1 monster with the lowest DEF on the field to the hand (your choice, if tied).
+    You can only use each effect of "Vanquish Soul Dr. Mad Love" once per turn, and cannot activate more than 1 in the same Chain.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ images:
 - index: 1
   image: VanquishSoulDrMadLove-DBWS-JP-SR.png
 sets:
+  en:
+  - set_number: WISU-EN019
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: WISU-DE019
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: WISU-FR019
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: WISU-IT019
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: WISU-PT019
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBWS-JP019
     set_name: 'Deck Build Pack: Wild Survivors'
