--- a/data/cards/30128445.yaml
+++ b/data/cards/30128445.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 6 monsters
-    If this card with no material battles another monster, any battle damage it inflicts to your opponent is doubled. You can only use each of the following effects of "Transcendosaurus Drillygnathus" once per turn. You can detach 1 material from this card, then target 1 of your banished Dinosaur monsters; Special Summon it. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card.
+    While this card has no materials, if it battles a monster, any battle damage it inflicts to your opponent is doubled. You can only use each of the following effects of "Transcendosaurus Drillygnathus" once per turn. You can detach 1 material from this card, then target 1 of your banished Dinosaur monsters; Special Summon it. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card.
   de:
   es:
   fr:
@@ -43,6 +43,31 @@ images:
 - index: 1
   image: TranscendosaurusDrillygnathus-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN005
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  de:
+  - set_number: WISU-DE005
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  fr:
+  - set_number: WISU-FR005
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  it:
+  - set_number: WISU-IT005
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  pt:
+  - set_number: WISU-PT005
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: DBWS-JP005
     set_name: 'Deck Build Pack: Wild Survivors'
