--- a/data/cards/31241087.yaml
+++ b/data/cards/31241087.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 超越龙 陨石龙
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned by card effect. You can only use each of the following effects of "Transcendosaurus Meteorus" once per turn. During your opponent's turn (Quick Effect): You can destroy 2 other Dinosaur monsters you control and/or in your hand, and if you do, Special Summon this card from your hand. If this card is Special Summoned: You can send 1 Dinosaur monster from your Deck to the GY. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card.
+    Cannot be Normal Summoned/Set. Must be Special Summoned by card effect. During your opponent's turn (Quick Effect): You can destroy 2 other Dinosaur monsters in your hand and/or field, and if you do, Special Summon this card from your hand. If this card is Special Summoned: You can send 1 Dinosaur monster from your Deck to the GY. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use each effect of "Transcendosaurus Meteorus" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: TranscendosaurusMeteorus-DBWS-JP-UR.png
 sets:
+  en:
+  - set_number: WISU-EN002
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE002
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR002
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT002
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT002
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP002
     set_name: 'Deck Build Pack: Wild Survivors'
