--- a/data/cards/40551410.yaml
+++ b/data/cards/40551410.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: Recette de Personnel~膳食的食谱~
 text:
   en: |-
-    You can target 1 Ritual Monster you control; Special Summon 1 "Nouvelles Token" (Fiend/DARK/Level 1/50 ATK/50 DEF), and if you do, its Level becomes that monster's. You can send this face-up card from your Spell & Trap Zone to the GY; Ritual Summon 1 "Nouvelles" Ritual Monster from your hand, by Tributing monsters from your hand or field whose total Levels exactly equal the Level of the Ritual Monster you Ritual Summon. You can only use each effect of "Recette de Personnel (Staff Recipe)" once per turn.
+    You can target 1 Ritual Monster you control; Special Summon 1 "Nouvelles Token" (Fiend/DARK/Level 1/50 ATK/50 DEF). This Token's Level becomes the same as that monster's. You can send this face-up card from your Spell & Trap Zone to the GY; Ritual Summon 1 "Nouvelles" Ritual Monster from your hand by Tributing monsters from your hand or field whose total Levels exactly equal the Level of that Ritual Monster. You can only use each effect of "Recette de Personnel (Staff Recipe)" once per turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ images:
 - index: 1
   image: RecettedePersonnel(StaffRecipe)-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN039
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  de:
+  - set_number: WISU-DE039
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  fr:
+  - set_number: WISU-FR039
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  it:
+  - set_number: WISU-IT039
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  pt:
+  - set_number: WISU-PT039
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: DBWS-JP039
     set_name: 'Deck Build Pack: Wild Survivors'
