--- a/data/cards/53330789.yaml
+++ b/data/cards/53330789.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 征服之魂 三重爆裂
 text:
   en: |-
-    Target 1 "Vanquish Soul" monster you control; Special Summon up to 2 "Vanquish Soul" monsters from your hand with different original Attributes from the targeted monster and with different names from each other (but negate their effects, also return them to the hand during the End Phase), then you can return all opponent's cards in the same column as the targeted monster and the Summoned monsters to the hand. You can only activate 1 "Vanquish Soul Trinity Burst" per turn.
+    Target 1 "Vanquish Soul" monster you control; Special Summon up to 2 "Vanquish Soul" monsters from your hand, with different names from each other, neither of which has the same original Attribute as the targeted monster (but negate their effects and return them to the hand during the End Phase), then you can return to the hand all cards your opponent controls that are in the same columns as the targeted monster you control and the monster(s) Special Summoned by this effect. You can only activate 1 "Vanquish Soul Trinity Burst" per turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ images:
 - index: 1
   image: VanquishSoulTrinityBurst-DBWS-JP-SR.png
 sets:
+  en:
+  - set_number: WISU-EN026
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE026
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR026
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT026
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT026
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP026
     set_name: 'Deck Build Pack: Wild Survivors'
