--- a/data/cards/66401502.yaml
+++ b/data/cards/66401502.yaml
@@ -15,10 +15,10 @@ name:
   zh-CN: 征服之魂 豹女
 text:
   en: |-
-    If you control no monsters in your Main Monster Zone: You can Special Summon this card from your hand. (Quick Effect): You can reveal 1 monster in your hand of each of the following Attributes, then activate the appropriate effect;
+    If you control no monsters in your Main Monster Zone: You can Special Summon this card from your hand. (Quick Effect): You can activate 1 of these effects, by revealing monster(s) in your hand with the listed Attribute(s);
     ● EARTH: This card cannot be destroyed by battle this turn.
-    ● EARTH and FIRE: Destroy all Spells and Traps in this card's column.
-    You can only use each effect of "Vanquish Soul Pantera" once per turn, and cannot activate them in the same Chain.
+    ● EARTH & FIRE: Destroy all Spells/Traps in this card's column.
+    You can only use each effect of "Vanquish Soul Pantera" once per turn, and cannot activate more than 1 in the same Chain.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ images:
 - index: 1
   image: VanquishSoulPantera-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN017
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: WISU-DE017
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: WISU-FR017
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: WISU-IT017
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: WISU-PT017
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBWS-JP017
     set_name: 'Deck Build Pack: Wild Survivors'
