--- a/data/cards/67523044.yaml
+++ b/data/cards/67523044.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 异度归零地
 text:
   en: |-
-    Add 1 Dinosaur Tuner or Dinosaur Normal Monster from your Deck to your hand, then destroy 1 card in your hand. You can banish this card from your GY; Fusion Summon 1 Dinosaur Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Material. You can only use each effect of "Ground Xeno" once per turn.
+    Add 1 Dinosaur Tuner or Dinosaur Normal Monster from your Deck to your hand, then destroy 1 card in your hand. You can banish this card from your GY; Fusion Summon 1 Dinosaur Fusion Monster from your Extra Deck, using monsters from your hand or field as material. You can only use each effect of "Ground Xeno" once per turn.
   de:
   es:
   fr:
@@ -33,6 +33,31 @@ images:
 - index: 1
   image: GroundXeno-DBWS-JP-SR.png
 sets:
+  en:
+  - set_number: WISU-EN006
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: WISU-DE006
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: WISU-FR006
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: WISU-IT006
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: WISU-PT006
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBWS-JP006
     set_name: 'Deck Build Pack: Wild Survivors'
