--- a/data/cards/87778106.yaml
+++ b/data/cards/87778106.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: Recette de Poisson~鱼料理的食谱~
 text:
   en: |-
-    This card can be used to Ritual Summon any "Nouvelles" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Buerillabaisse de Nouvelles" with this effect, you can apply the following effect.
+    This card can be used to Ritual Summon any "Nouvelles" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Buerillabaisse de Nouvelles", you can apply the following effect.
     ● Add 1 "Recipe" Ritual Spell from your Deck or GY to your hand, except "Recette de Poisson (Fish Recipe)".
   de:
   es:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: RecettedePoisson(FishRecipe)-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN037
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE037
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR037
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT037
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT037
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP037
     set_name: 'Deck Build Pack: Wild Survivors'
