--- a/data/cards/87955518.yaml
+++ b/data/cards/87955518.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: Recette de Spécialité~主厨自豪的食谱~
 text:
   en: |-
-    When a Spell/Trap Card, or monster effect, is activated while you control a "Nouvelles" Ritual Monster: Negate the activation, then, if you control a monster Special Summoned by a "Nouvelles" monster's effect, you can destroy that card. If you Special Summon "Hungry Burger": You can banish this card from your GY; Tribute as many monsters your opponent controls as possible. You can only use each effect of "Chef's Special Recipe" once per turn.
+    When a Spell/Trap Card, or monster effect, is activated while you control a "Nouvelles" Ritual Monster: Negate the activation, then you can destroy that card if you control a monster that was Special Summoned by the effect of a "Nouvelles" monster. If you Special Summon "Hungry Burger": You can banish this card from your GY; Tribute as many monsters your opponent controls as possible. You can only use each effect of "Chef's Special Recipe" once per turn.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ images:
 - index: 1
   image: ChefsSpecialRecipe-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN040
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  de:
+  - set_number: WISU-DE040
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  fr:
+  - set_number: WISU-FR040
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  it:
+  - set_number: WISU-IT040
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  pt:
+  - set_number: WISU-PT040
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: DBWS-JP040
     set_name: 'Deck Build Pack: Wild Survivors'
