--- a/data/cards/88890658.yaml
+++ b/data/cards/88890658.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 新式魔餐 烘烤巴力
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Baegriller Nouvelles" once per turn. If this card is Special Summoned: You can negate the effects of as many face-up cards your opponent currently controls as possible (until the end of this turn), then, if this card was Special Summoned by a "Nouvelles" monster's effect, Tribute as many monsters your opponent controls as possible. (Quick Effect): You can target 1 opponent's Attack Position monster; Tribute it, and if you do, Special Summon 1 "Hungry Burger" from your hand or Deck.
+    You can Ritual Summon this card with a "Recipe" card. If this card is Special Summoned: You can negate the effects of all face-up cards your opponent currently controls (until the end of this turn), then, if this card was Special Summoned by the effect of a "Nouvelles" monster, you can Tribute as many monsters your opponent controls as possible. (Quick Effect): You can target 1 Attack Position monster your opponent controls; Tribute it, and if you do, Special Summon 1 "Hungry Burger" from your hand or Deck. You can only use each effect of "Baelgrill de Nouvelles" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: BaelgrilldeNouvelles-DBWS-JP-UR.png
 sets:
+  en:
+  - set_number: WISU-EN034
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE034
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR034
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT034
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT034
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP034
     set_name: 'Deck Build Pack: Wild Survivors'
