--- a/data/cards/89016236.yaml
+++ b/data/cards/89016236.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 新式魔餐 闷煎布提斯
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Poeltis de Nouvelles" once per turn. If this card is Special Summoned: You can draw 1 card. When a card or effect is activated that targets a monster(s) on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute both 1 "Nouvelles" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 4 or 5 "Nouvelles" Ritual Monster from your hand or Deck.
+    You can Ritual Summon this card with a "Recipe" card. If this card is Special Summoned: You can draw 1 card. When a card or effect is activated that targets a monster on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute 1 "Nouvelles" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 4 or 5 "Nouvelles" Ritual Monster from your hand or Deck. You can only use each effect of "Poeltis de Nouvelles" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: PoeltisdeNouvelles-DBWS-JP-SR.png
 sets:
+  en:
+  - set_number: WISU-EN031
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE031
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR031
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT031
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT031
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP031
     set_name: 'Deck Build Pack: Wild Survivors'
