--- a/data/cards/91073013.yaml
+++ b/data/cards/91073013.yaml
@@ -15,10 +15,10 @@ name:
   zh-CN: 征服之魂 龙帝伐利乌斯
 text:
   en: |-
-    During the Main Phase (Quick Effect): You can target 1 non-Dragon "Vanquish Soul" monster you control; return it to the hand, and if you do, Special Summon this card from your hand. (Quick Effect): You can reveal 1 monster in your hand of each of the following Attributes, then activate the appropriate effect;
+    During the Main Phase (Quick Effect): You can target 1 non-Dragon "Vanquish Soul" monster you control; return it to the hand, and if you do, Special Summon this card from your hand. (Quick Effect): You can activate 1 of these effects, by revealing monster(s) in your hand with the listed Attribute(s);
     ● EARTH: This face-up card is unaffected by your opponent's activated effects this turn.
-    ● EARTH, FIRE, and DARK: Destroy 1 other card on the field.
-    You can only use each effect of "Vanquish Soul Caesar Valius" once per turn, and cannot activate them in the same Chain.
+    ● EARTH, FIRE, & DARK: Destroy 1 other card on the field.
+    You can only use each effect of "Vanquish Soul Caesar Valius" once per turn, and cannot activate more than 1 in the same Chain.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ images:
 - index: 1
   image: VanquishSoulCaesarValius-DBWS-JP-UR.png
 sets:
+  en:
+  - set_number: WISU-EN021
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: WISU-DE021
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: WISU-FR021
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: WISU-IT021
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: WISU-PT021
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBWS-JP021
     set_name: 'Deck Build Pack: Wild Survivors'
