--- a/data/cards/91951471.yaml
+++ b/data/cards/91951471.yaml
@@ -35,6 +35,31 @@ images:
 - index: 1
   image: VanquishSoulDustDevil-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN024
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  de:
+  - set_number: WISU-DE024
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: WISU-FR024
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  it:
+  - set_number: WISU-IT024
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: WISU-PT024
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBWS-JP024
     set_name: 'Deck Build Pack: Wild Survivors'
