--- a/data/cards/92895501.yaml
+++ b/data/cards/92895501.yaml
@@ -15,10 +15,10 @@ name:
   zh-CN: 征服之魂 重型博格
 text:
   en: |-
-    During the Main Phase (Quick Effect): You can target 1 non-Machine "Vanquish Soul" monster you control; return it to the hand, and if you do, Special Summon this card from your hand. (Quick Effect): You can reveal 1 monster in your hand of each of the following Attributes, then activate the appropriate effect;
+    During the Main Phase (Quick Effect): You can target 1 non-Machine "Vanquish Soul" monster you control; return it to the hand, and if you do, Special Summon this card from your hand. (Quick Effect): You can activate 1 of these effects, by revealing monster(s) in your hand with the listed Attribute(s);
     ● DARK: Draw 1 card.
-    ● EARTH and FIRE: Inflict 1500 damage to your opponent.
-    You can only use each effect of "Vanquish Soul Heavy Borger" once per turn, and cannot activate them in the same Chain.
+    ● EARTH & FIRE: Inflict 1500 damage to your opponent.
+    You can only use each effect of "Vanquish Soul Heavy Borger" once per turn, and cannot activate more than 1 in the same Chain.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ images:
 - index: 1
   image: VanquishSoulHeavyBorger-DBWS-JP-SR.png
 sets:
+  en:
+  - set_number: WISU-EN018
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: WISU-DE018
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: WISU-FR018
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: WISU-IT018
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: WISU-PT018
+    set_name: Wild Survivors
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBWS-JP018
     set_name: 'Deck Build Pack: Wild Survivors'
