--- a/data/cards/93918159.yaml
+++ b/data/cards/93918159.yaml
@@ -33,6 +33,31 @@ images:
 - index: 1
   image: Supersoaring-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN007
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  de:
+  - set_number: WISU-DE007
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  fr:
+  - set_number: WISU-FR007
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  it:
+  - set_number: WISU-IT007
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  pt:
+  - set_number: WISU-PT007
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: DBWS-JP007
     set_name: 'Deck Build Pack: Wild Survivors'
