--- a/data/cards/94130731.yaml
+++ b/data/cards/94130731.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    Cannot be destroyed by battle. Your opponent cannot target your Dinosaur monsters Special Summoned from the GY with card effects, also they cannot be destroyed by your opponent's card effects. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use this effect of "Transcendosaurus Glaciasaurus" once per turn.
+    Cannot be destroyed by battle. Dinosaur monsters you control that were Special Summoned from the GY cannot be destroyed by your opponent's card effects, also your opponent cannot target them with card effects. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use this effect of "Transcendosaurus Glaciasaurus" once per turn.
   de:
   es:
   fr:
@@ -43,6 +43,31 @@ images:
 - index: 1
   image: TranscendosaurusGlaciasaurus-DBWS-JP-C.png
 sets:
+  en:
+  - set_number: WISU-EN004
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  de:
+  - set_number: WISU-DE004
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  fr:
+  - set_number: WISU-FR004
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  it:
+  - set_number: WISU-IT004
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+  pt:
+  - set_number: WISU-PT004
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: DBWS-JP004
     set_name: 'Deck Build Pack: Wild Survivors'
