--- a/data/cards/06631034.yaml
+++ b/data/cards/06631034.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: WISU-EN008
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: STON-DE002
     set_name: Strike of Neos
@@ -81,6 +85,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: WISU-DE008
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: STON-FR002
     set_name: Strike of Neos
@@ -100,6 +108,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: WISU-FR008
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: STON-IT002
     set_name: Strike of Neos
@@ -119,6 +131,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: WISU-IT008
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: BP02-PT003
     set_name: 'Battle Pack 2: War of the Giants'
@@ -129,6 +145,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: WISU-PT008
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: STON-JP002
     set_name: Strike of Neos
