--- a/data/cards/13048472.yaml
+++ b/data/cards/13048472.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Super Rare
+  - set_number: WISU-EN056
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: SHVI-DE065
     set_name: Shining Victories
@@ -81,6 +85,10 @@ sets:
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Super Rare
+  - set_number: WISU-DE056
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: SHVI-FR065
     set_name: Shining Victories
@@ -102,6 +110,10 @@ sets:
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Super Rare
+  - set_number: WISU-FR056
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: SHVI-IT065
     set_name: Shining Victories
@@ -123,6 +135,10 @@ sets:
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Super Rare
+  - set_number: WISU-IT056
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: SHVI-PT065
     set_name: Shining Victories
@@ -140,6 +156,10 @@ sets:
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Super Rare
+  - set_number: WISU-PT056
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: SHVI-JP065
     set_name: Shining Victories
