--- a/data/cards/80280944.yaml
+++ b/data/cards/80280944.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: WISU-EN010
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: BLLR-DE027
     set_name: "Battles of Legend: Light's Revenge"
@@ -59,6 +63,10 @@ sets:
     - Ultra Rare
   - set_number: MGED-DE055
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: WISU-DE010
+    set_name: Wild Survivors
     rarities:
     - Rare
   fr:
@@ -70,6 +78,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: WISU-FR010
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: BLLR-IT027
     set_name: "Battles of Legend: Light's Revenge"
@@ -79,6 +91,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: WISU-IT010
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: BLLR-PT027
     set_name: "Battles of Legend: Light's Revenge"
@@ -86,6 +102,10 @@ sets:
     - Ultra Rare
   - set_number: MGED-PT055
     set_name: 'Maximum Gold: El Dorado'
+    rarities:
+    - Rare
+  - set_number: WISU-PT010
+    set_name: Wild Survivors
     rarities:
     - Rare
   ja:
