--- a/data/cards/80701178.yaml
+++ b/data/cards/80701178.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Common
+  - set_number: WISU-EN044
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: CYHO-DE013
     set_name: Cybernetic Horizon
@@ -71,6 +75,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Common
+  - set_number: WISU-DE044
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: CYHO-FR013
     set_name: Cybernetic Horizon
@@ -84,6 +92,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Common
+  - set_number: WISU-FR044
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: CYHO-IT013
     set_name: Cybernetic Horizon
@@ -97,6 +109,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Common
+  - set_number: WISU-IT044
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: CYHO-PT013
     set_name: Cybernetic Horizon
@@ -110,6 +126,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Common
+  - set_number: WISU-PT044
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: CYHO-JP013
     set_name: Cybernetic Horizon
