--- a/data/cards/82085295.yaml
+++ b/data/cards/82085295.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Common
+  - set_number: WISU-EN048
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: SOFU-DE023
     set_name: Soul Fusion
@@ -71,6 +75,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Common
+  - set_number: WISU-DE048
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: SOFU-FR023
     set_name: Soul Fusion
@@ -84,6 +92,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Common
+  - set_number: WISU-FR048
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: SOFU-IT023
     set_name: Soul Fusion
@@ -97,6 +109,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Common
+  - set_number: WISU-IT048
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: SOFU-PT023
     set_name: Soul Fusion
@@ -110,6 +126,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Common
+  - set_number: WISU-PT048
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: SOFU-JP023
     set_name: Soul Fusion
