--- a/data/cards/96729612.yaml
+++ b/data/cards/96729612.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: WISU-EN045
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: SOVR-DE057
     set_name: Stardust Overdrive
@@ -95,6 +99,10 @@ sets:
     - Rare
   - set_number: AMDE-DE055
     set_name: Amazing Defenders
+    rarities:
+    - Rare
+  - set_number: WISU-DE045
+    set_name: Wild Survivors
     rarities:
     - Rare
   fr:
@@ -126,6 +134,10 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: WISU-FR045
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: SOVR-IT057
     set_name: Stardust Overdrive
@@ -155,6 +167,10 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: WISU-IT045
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: THSF-PT053
     set_name: The Secret Forces
@@ -178,6 +194,10 @@ sets:
     - Rare
   - set_number: AMDE-PT055
     set_name: Amazing Defenders
+    rarities:
+    - Rare
+  - set_number: WISU-PT045
+    set_name: Wild Survivors
     rarities:
     - Rare
   ja:
