--- a/data/cards/01475311.yaml
+++ b/data/cards/01475311.yaml
@@ -99,6 +99,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: WISU-EN054
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: PTDN-DE084
     set_name: Phantom Darkness
@@ -158,6 +162,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: WISU-DE054
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: PTDN-FR084
     set_name: Phantom Darkness
@@ -217,6 +225,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: WISU-FR054
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: PTDN-IT084
     set_name: Phantom Darkness
@@ -276,6 +288,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: WISU-IT054
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: OP01-PT025
     set_name: OTS Tournament Pack 1
@@ -318,6 +334,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: WISU-PT054
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: EXP1-JP027
     set_name: Extra Pack
