--- a/data/cards/18474999.yaml
+++ b/data/cards/18474999.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: WISU-EN049
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: SOFU-DE024
     set_name: Soul Fusion
@@ -63,6 +67,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: WISU-DE049
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: SOFU-FR024
     set_name: Soul Fusion
@@ -72,6 +80,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: WISU-FR049
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: SOFU-IT024
     set_name: Soul Fusion
@@ -81,6 +93,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: WISU-IT049
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: SOFU-PT024
     set_name: Soul Fusion
@@ -90,6 +106,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: WISU-PT049
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: SOFU-JP024
     set_name: Soul Fusion
