--- a/data/cards/18940556.yaml
+++ b/data/cards/18940556.yaml
@@ -52,6 +52,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-EN009
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   de:
   - set_number: SR04-DE001
     set_name: Dinosmasher's Fury Structure Deck
@@ -61,6 +66,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-DE009
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   fr:
   - set_number: SR04-FR001
     set_name: Dinosmasher's Fury Structure Deck
@@ -70,6 +80,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-FR009
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   it:
   - set_number: SR04-IT001
     set_name: Dinosmasher's Fury Structure Deck
@@ -79,6 +94,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-IT009
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   pt:
   - set_number: SR04-PT001
     set_name: Dinosmasher's Fury Structure Deck
@@ -88,6 +108,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-PT009
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   ja:
   - set_number: SR04-JP001
     set_name: "Structure Deck R: Tyranno's Rage"
