--- a/data/cards/30243636.yaml
+++ b/data/cards/30243636.yaml
@@ -53,6 +53,11 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-EN041
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+    - Collector's Rare
   - set_number: MRL-068
     set_name: Magic Ruler
     rarities:
@@ -74,6 +79,11 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-DE041
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+    - Collector's Rare
   fr:
   - set_number: MDM-F068
     set_name: Spell Ruler
@@ -83,6 +93,11 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-FR041
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+    - Collector's Rare
   it:
   - set_number: SDM-I068
     set_name: Spell Ruler
@@ -92,11 +107,21 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-IT041
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+    - Collector's Rare
   pt:
   - set_number: SRL-PT068
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-PT041
+    set_name: Wild Survivors
+    rarities:
+    - Super Rare
+    - Collector's Rare
   ja:
   - set_number: PS-17
     set_name: Pharaoh's Servant (Japanese)
