--- a/data/cards/30539496.yaml
+++ b/data/cards/30539496.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: Toon Chaos
     rarities:
     - Rare
+  - set_number: WISU-EN047
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: RATE-DE019
     set_name: Raging Tempest
@@ -69,6 +73,10 @@ sets:
     - Super Rare
   - set_number: TOCH-DE038
     set_name: Toon Chaos
+    rarities:
+    - Rare
+  - set_number: WISU-DE047
+    set_name: Wild Survivors
     rarities:
     - Rare
   fr:
@@ -84,6 +92,10 @@ sets:
     set_name: Toon Chaos
     rarities:
     - Rare
+  - set_number: WISU-FR047
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: RATE-IT019
     set_name: Raging Tempest
@@ -97,6 +109,10 @@ sets:
     set_name: Toon Chaos
     rarities:
     - Rare
+  - set_number: WISU-IT047
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: RATE-PT019
     set_name: Raging Tempest
@@ -108,6 +124,10 @@ sets:
     - Super Rare
   - set_number: TOCH-PT038
     set_name: Toon Chaos
+    rarities:
+    - Rare
+  - set_number: WISU-PT047
+    set_name: Wild Survivors
     rarities:
     - Rare
   ja:
