--- a/data/cards/35027493.yaml
+++ b/data/cards/35027493.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: WISU-EN058
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: FET-DE058
     set_name: Flaming Eternity
@@ -110,6 +114,10 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: WISU-DE058
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: FET-FR058
     set_name: Flaming Eternity
@@ -144,6 +152,10 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: WISU-FR058
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: FET-IT058
     set_name: Flaming Eternity
@@ -178,6 +190,10 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: WISU-IT058
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: FET-PT058
     set_name: Flaming Eternity
@@ -196,6 +212,10 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: WISU-PT058
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: FET-JP058
     set_name: Flaming Eternity
