--- a/data/cards/36042004.yaml
+++ b/data/cards/36042004.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: WISU-EN013
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: POTD-DE022
     set_name: Power of the Duelist
@@ -101,6 +105,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: WISU-DE013
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: POTD-FR022
     set_name: Power of the Duelist
@@ -130,6 +138,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: WISU-FR013
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: POTD-IT022
     set_name: Power of the Duelist
@@ -159,6 +171,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: WISU-IT013
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: LCJW-PT157
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -176,6 +192,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: WISU-PT013
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: POTD-JP022
     set_name: Power of the Duelist
