--- a/data/cards/38179121.yaml
+++ b/data/cards/38179121.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: WISU-EN053
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: BLLR-DE028
     set_name: "Battles of Legend: Light's Revenge"
@@ -63,6 +67,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: WISU-DE053
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: BLLR-FR028
     set_name: "Battles of Legend: Light's Revenge"
@@ -72,6 +80,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: WISU-FR053
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: BLLR-IT028
     set_name: "Battles of Legend: Light's Revenge"
@@ -81,6 +93,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: WISU-IT053
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: BLLR-PT028
     set_name: "Battles of Legend: Light's Revenge"
@@ -90,6 +106,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: WISU-PT053
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: CP17-JP032
     set_name: Collectors Pack 2017
