--- a/data/cards/38572779.yaml
+++ b/data/cards/38572779.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-EN011
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: RATE-DE028
     set_name: Raging Tempest
@@ -77,6 +81,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-DE011
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: RATE-FR028
     set_name: Raging Tempest
@@ -94,6 +102,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-FR011
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: RATE-IT028
     set_name: Raging Tempest
@@ -111,6 +123,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-IT011
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: RATE-PT028
     set_name: Raging Tempest
@@ -128,6 +144,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-PT011
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: RATE-JP028
     set_name: Raging Tempest
