--- a/data/cards/44335251.yaml
+++ b/data/cards/44335251.yaml
@@ -52,6 +52,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-EN012
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   de:
   - set_number: SR04-DE002
     set_name: Dinosmasher's Fury Structure Deck
@@ -61,6 +66,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-DE012
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   fr:
   - set_number: SR04-FR002
     set_name: Dinosmasher's Fury Structure Deck
@@ -70,6 +80,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-FR012
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   it:
   - set_number: SR04-IT002
     set_name: Dinosmasher's Fury Structure Deck
@@ -79,6 +94,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-IT012
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   pt:
   - set_number: SR04-PT002
     set_name: Dinosmasher's Fury Structure Deck
@@ -88,6 +108,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-PT012
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   ja:
   - set_number: SR04-JP002
     set_name: "Structure Deck R: Tyranno's Rage"
