--- a/data/cards/47325505.yaml
+++ b/data/cards/47325505.yaml
@@ -70,6 +70,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Ultra Rare
+  - set_number: WISU-EN055
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: ANPR-DE062
     set_name: Ancient Prophecy
@@ -99,6 +103,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Ultra Rare
+  - set_number: WISU-DE055
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: ANPR-FR062
     set_name: Ancient Prophecy
@@ -128,6 +136,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Ultra Rare
+  - set_number: WISU-FR055
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: ANPR-IT062
     set_name: Ancient Prophecy
@@ -157,6 +169,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Ultra Rare
+  - set_number: WISU-IT055
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: LCJW-PT164
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -178,6 +194,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Ultra Rare
+  - set_number: WISU-PT055
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: ANPR-JP062
     set_name: Ancient Prophecy
