--- a/data/cards/53303460.yaml
+++ b/data/cards/53303460.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: WISU-EN043
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: CYHO-DE012
     set_name: Cybernetic Horizon
@@ -63,6 +67,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: WISU-DE043
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: CYHO-FR012
     set_name: Cybernetic Horizon
@@ -72,6 +80,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: WISU-FR043
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: CYHO-IT012
     set_name: Cybernetic Horizon
@@ -81,6 +93,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: WISU-IT043
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: CYHO-PT012
     set_name: Cybernetic Horizon
@@ -90,6 +106,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: WISU-PT043
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: CYHO-JP012
     set_name: Cybernetic Horizon
