--- a/data/cards/54974237.yaml
+++ b/data/cards/54974237.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: 'Structure Deck: Lair of Darkness'
     rarities:
     - Common
+  - set_number: WISU-EN059
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: FOTB-DE068
     set_name: Force of the Breaker
@@ -92,6 +96,10 @@ sets:
     set_name: 'Structure Deck: Lair of Darkness'
     rarities:
     - Common
+  - set_number: WISU-DE059
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: FOTB-FR068
     set_name: Force of the Breaker
@@ -117,6 +125,10 @@ sets:
     set_name: 'Structure Deck: Lair of Darkness'
     rarities:
     - Common
+  - set_number: WISU-FR059
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: FOTB-IT068
     set_name: Force of the Breaker
@@ -142,6 +154,10 @@ sets:
     set_name: 'Structure Deck: Lair of Darkness'
     rarities:
     - Common
+  - set_number: WISU-IT059
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: SDMP-PT040
     set_name: Master of Pendulum Structure Deck
@@ -155,6 +171,10 @@ sets:
     set_name: 'Structure Deck: Lair of Darkness'
     rarities:
     - Common
+  - set_number: WISU-PT059
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: SD12-JP026
     set_name: 'Structure Deck: Curse of Darkness'
