--- a/data/cards/57103969.yaml
+++ b/data/cards/57103969.yaml
@@ -80,6 +80,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-EN028
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   - set_number: FFSE-EN001
     set_name: 'Fire Fists: Special Edition'
     rarities:
@@ -122,6 +127,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-DE028
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   fr:
   - set_number: CBLZ-FR059
     set_name: Cosmo Blazer
@@ -160,6 +170,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-FR028
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   it:
   - set_number: CBLZ-IT059
     set_name: Cosmo Blazer
@@ -198,6 +213,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-IT028
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   pt:
   - set_number: CBLZ-PT059
     set_name: Cosmo Blazer
@@ -231,6 +251,11 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: WISU-PT028
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   ja:
   - set_number: CBLZ-JP059
     set_name: Cosmo Blazer
