--- a/data/cards/65877963.yaml
+++ b/data/cards/65877963.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: Genesis Impact
     rarities:
     - Super Rare
+  - set_number: WISU-EN051
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: SAST-DE032
     set_name: Savage Strike
@@ -64,6 +68,10 @@ sets:
     set_name: Genesis Impact
     rarities:
     - Super Rare
+  - set_number: WISU-DE051
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: SAST-FR032
     set_name: Savage Strike
@@ -73,6 +81,10 @@ sets:
     set_name: Genesis Impact
     rarities:
     - Super Rare
+  - set_number: WISU-FR051
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: SAST-IT032
     set_name: Savage Strike
@@ -82,6 +94,10 @@ sets:
     set_name: Genesis Impact
     rarities:
     - Super Rare
+  - set_number: WISU-IT051
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: SAST-PT032
     set_name: Savage Strike
@@ -91,6 +107,10 @@ sets:
     set_name: Genesis Impact
     rarities:
     - Super Rare
+  - set_number: WISU-PT051
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: SAST-JP032
     set_name: Savage Strike
