--- a/data/cards/80811661.yaml
+++ b/data/cards/80811661.yaml
@@ -50,6 +50,10 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-EN042
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   - set_number: MRL-063
     set_name: Magic Ruler
     rarities:
@@ -71,6 +75,10 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-DE042
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: MDM-F063
     set_name: Spell Ruler
@@ -80,6 +88,10 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-FR042
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: SDM-I063
     set_name: Spell Ruler
@@ -89,11 +101,19 @@ sets:
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-IT042
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: SRL-PT063
     set_name: Spell Ruler (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-PT042
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: PS-12
     set_name: Pharaoh's Servant (Japanese)
