--- a/data/cards/82946847.yaml
+++ b/data/cards/82946847.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: Dinosmasher's Fury Structure Deck
     rarities:
     - Ultra Rare
+  - set_number: WISU-EN014
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   de:
   - set_number: SR04-DE000
     set_name: Dinosmasher's Fury Structure Deck
     rarities:
     - Ultra Rare
+  - set_number: WISU-DE014
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: SR04-FR000
     set_name: Dinosmasher's Fury Structure Deck
     rarities:
     - Ultra Rare
+  - set_number: WISU-FR014
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: SR04-IT000
     set_name: Dinosmasher's Fury Structure Deck
     rarities:
     - Ultra Rare
+  - set_number: WISU-IT014
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: SR04-PT000
     set_name: Dinosmasher's Fury Structure Deck
     rarities:
     - Ultra Rare
+  - set_number: WISU-PT014
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: SR04-JP000
     set_name: "Structure Deck R: Tyranno's Rage"
