--- a/data/cards/95492061.yaml
+++ b/data/cards/95492061.yaml
@@ -84,6 +84,10 @@ sets:
     set_name: Invasion of Chaos (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-EN046
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   - set_number: IOC-088
     set_name: Invasion of Chaos
     rarities:
@@ -133,6 +137,10 @@ sets:
     set_name: Invasion of Chaos (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-DE046
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   fr:
   - set_number: DR2-FR089
     set_name: Dark Revelation Volume 2
@@ -174,6 +182,10 @@ sets:
     set_name: Invasion of Chaos (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-FR046
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   it:
   - set_number: DR2-IT089
     set_name: Dark Revelation Volume 2
@@ -215,6 +227,10 @@ sets:
     set_name: Invasion of Chaos (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-IT046
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   pt:
   - set_number: THSF-PT033
     set_name: The Secret Forces
@@ -236,6 +252,10 @@ sets:
     set_name: Invasion of Chaos (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: WISU-PT046
+    set_name: Wild Survivors
+    rarities:
+    - Rare
   ja:
   - set_number: 307-033
     set_name: Invader of Darkness (set)
