--- a/data/cards/98022050.yaml
+++ b/data/cards/98022050.yaml
@@ -53,6 +53,11 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: WISU-EN050
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   de:
   - set_number: ETCO-DE037
     set_name: Eternity Code
@@ -62,6 +67,11 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: WISU-DE050
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   fr:
   - set_number: ETCO-FR037
     set_name: Eternity Code
@@ -71,6 +81,11 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: WISU-FR050
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   it:
   - set_number: ETCO-IT037
     set_name: Eternity Code
@@ -80,6 +95,11 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: WISU-IT050
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   pt:
   - set_number: ETCO-PT037
     set_name: Eternity Code
@@ -89,6 +109,11 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: WISU-PT050
+    set_name: Wild Survivors
+    rarities:
+    - Rare
+    - Collector's Rare
   ja:
   - set_number: ETCO-JP037
     set_name: Eternity Code
