--- a/rush.yaml
+++ b/rush.yaml
@@ -43298,7 +43298,7 @@ yugipedia_page_id: 715398
 ---
 konami_id: 16900
 name:
-  en: Sevens Paladin the Magical Knight
+  en: Sevens Paladin
   de:
   es:
   fr:
@@ -43363,7 +43363,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: SevensPaladintheMagicalKnight-RDEXT1-JP-UR.png
+  image: SevensPaladin-RDEXT1-JP-UR.png
 sets:
   ja:
   - set_number: RD/EXT1-JP015
