--- a/data/rush/17555.yaml
+++ b/data/rush/17555.yaml
@@ -1,6 +1,6 @@
 konami_id: 17555
 name:
-  en: Fancy Ladybug Pastel
+  en: Fantasy Ladybug Pastel
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ atk: 700
 def: 100
 images:
 - index: 1
-  image: FancyLadybugPastel-RDB221-JP-C.png
+  image: FantasyLadybugPastel-RDB221-JP-C.png
 sets:
   ja:
   - set_number: RD/B221-JP006
