--- a/data/cards/09126351.yaml
+++ b/data/cards/09126351.yaml
@@ -149,5 +149,5 @@ sets:
     - Extra Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 100948
