--- a/data/cards/18326736.yaml
+++ b/data/cards/18326736.yaml
@@ -112,5 +112,5 @@ sets:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Limited
+  ocg: Semi-Limited
 yugipedia_page_id: 383499
