--- a/data/cards/27381364.yaml
+++ b/data/cards/27381364.yaml
@@ -107,5 +107,5 @@ sets:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Forbidden
-  ocg: Unlimited
+  ocg: Forbidden
 yugipedia_page_id: 716814
