--- a/data/cards/32731036.yaml
+++ b/data/cards/32731036.yaml
@@ -100,5 +100,5 @@ sets:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Limited
 yugipedia_page_id: 717051
