--- a/data/cards/63288573.yaml
+++ b/data/cards/63288573.yaml
@@ -254,5 +254,5 @@ sets:
     - Premium Gold Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Semi-Limited
+  ocg: Unlimited
 yugipedia_page_id: 552505
