--- a/data/cards/76145933.yaml
+++ b/data/cards/76145933.yaml
@@ -116,5 +116,5 @@ sets:
     - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Limited
 yugipedia_page_id: 716811
