--- a/data/rush/17203.yaml
+++ b/data/rush/17203.yaml
@@ -1,6 +1,6 @@
 konami_id: 17203
 name:
-  en: Infinidream Constructor Wyrm Buildrim
+  en: Infinite Constructor Wyrm Buildream
   de:
   es:
   fr:
@@ -64,7 +64,7 @@ series:
 - Constructor
 images:
 - index: 1
-  image: InfinidreamConstructorWyrmBuildrim-RDGRP1-JP-UR.png
+  image: InfiniteConstructorWyrmBuildream-RDGRP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/GRP1-JP014
